# flask-s3

./: .gitignore  .travis.yml  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  README.rst  flask_s3.py  nose2.cfg  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_flask_static.py  tox.ini
.github/workflows/: upload-pypi.yml
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
example/example/: app.py
example/example/static/: foo.js
flask_s3/: __init__.py
tests/: test_flask_static.py
