[metadata]
name = Flask-S3-ng
description = New Generation version of Flask-S3 project. Seamlessly serve the static files of your Flask app from Amazon S3
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: BSD License
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3.8
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: Other/Proprietary License
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Internet :: WWW/HTTP :: Dynamic Content
  Topic :: Software Development :: Libraries :: Python Modules
author = Edward Robinson
author_email = hi@edd.io
maintainer = cr0hn (maintainer)
maintainer_email = cr0hn@cr0hn.com
url = http://github.com/cr0hn/flask-s3

[options]
zip_safe = True
include_package_data = True
packages = find:

